helm-values/prod/platform/db-connector.yaml
# SignalForge 2026: Production Managed DB Proxy
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: signalforge-prod
  labels:
    app.kubernetes.io/part-of: signalforge
    env: prod
spec:
  type: ExternalName
  # This points to your Primary Azure Region Database
  externalName: signal-prod-db.postgres.database.azure.com
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
